atualização do README e do index.html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <div id="footer">
 	<p>Compiled by <a href="http://chris-lamb.co.uk" target="_blank">lamby</a> and others. <a href="https://github.com/phls/eventos-brasil-timeline" target="_blank">Git repository</a>.<br/>
-	<p>Mantido por <a href="http://www.phls.com.br" target="_blank">Paulo Henrique de Lima Santana</a>.</p>
+	<p>Mantido por <a href="http://www.phls.com.br" target="_blank">Paulo Henrique de Lima Santana (phls at softwarelivre dot org)</a>.</p>
 <p>
 <!-- INICIO FORMULARIO BOTAO PAGSEGURO -->
 <form action="https://pagseguro.uol.com.br/checkout/v2/donation.html" method="post">
